--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,7 +1,7 @@
 site_name: Home Page
 theme: readthedocs
 nav:
-- About: about.md
+- About me: about.md
 - 主页搭建: homepage_build.md
 - 优秀博客:
   - 优秀博客汇总: 'blogs/index.md'
