--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,9 +4,22 @@ repo_name: https://github.com/HannanKan/homepage
 theme:
   name: 'material'
   custom_dir: overrides
+  features:
+    - content.code.copy
+    - content.code.select
+plugins:
+  - meta-manager
+markdown_extensions:
+  - pymdownx.highlight:
+      anchor_linenums: true
+      line_spans: __span
+      pygments_lang_class: true
+  - pymdownx.inlinehilite
+  - pymdownx.snippets
+  - pymdownx.superfences
+
 nav:
 - Home: 'index.md'
-- About me: about.md
 - 主页搭建: homepage_build.md
 - 优秀博客:
   - 优秀博客汇总: 'blogs/index.md'
