临时关闭 meta 插件和 glightbox插件, 因为 github action脚本不支持

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -8,7 +8,7 @@ theme:
     - content.code.copy
     - content.code.select
 plugins:
-  - meta
+  # - meta-manager
   # - glightbox
 
 markdown_extensions:
