gh-deploy 添加python依赖包. BTW 认真看github 项目的README.md

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -8,8 +8,9 @@ theme:
     - content.code.copy
     - content.code.select
 plugins:
-  # - meta-manager
-  # - glightbox
+  - meta-manager
+  - search
+  - glightbox
 
 markdown_extensions:
   - pymdownx.highlight:
