--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -17,6 +17,9 @@ markdown_extensions:
       anchor_linenums: true
       line_spans: __span
       pygments_lang_class: true
+  - def_list
+  - pymdownx.tasklist:
+      custom_checkbox: true
   - pymdownx.inlinehilite
   - pymdownx.snippets
   - pymdownx.superfences
@@ -39,6 +42,10 @@ nav:
   - 工程实践: 'engineering/工程实践.md'
   - Java/Scala:
     - 并发: 'engineering/java_scala/并发.md'
+  - 快学大数据:
+    - 学习大纲: 'engineering/intro2BigDataComponent/outline.md'
+    - Hudi:
+      - Hudi 简介: 'engineering/intro2BigDataComponent/hudi/hudi_intro.md'
 - 优秀博客:
   - 优秀博客汇总: 'blogs/index.md'
 - 学习资料:
