--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -46,6 +46,7 @@ nav:
     - 性能优化:
       - 1BRC竞赛: 'engineering/java_scala/性能优化/1brc.md'
       - 1BRC竞赛代码赏析: 'engineering/java_scala/性能优化/1brc-review.md'
+      - 线程泄露: 'engineering/java_scala/性能优化/threadLeakInvestigate.md'
   - 快学大数据:
     - 学习大纲: 'engineering/intro2BigDataComponent/outline.md'
     - Hudi:
